RWA-3563: Fixed Sonar issues